--- a/dockerbuild-eap/Dockerfile
+++ b/dockerbuild-eap/Dockerfile
@@ -1,5 +1,5 @@
 FROM registry.access.redhat.com/jboss-eap-6/eap64-openshift:1.2
 
-MAINTAINER Siamak Sadeghianfar <ssadeghi@redhat.com>
+MAINTAINER An Nguyen <ann@redhat.com>
 
 RUN curl -L -o /opt/eap/standalone/deployments/ROOT.war https://www.dropbox.com/s/p4m7wdarfda9ibo/helloworld.war?dl=1 
